adjusted alignment of search area, used flexbox to fix alignment of searchbar

--- a/styles.css
+++ b/styles.css
@@ -78,30 +78,44 @@ header a {
     min-height: 92px;
     max-height: 290px;
     justify-content: flex-end;
+    padding-bottom: 6px;
 }
 
-
 #search-form {
-    display: flex;
-    flex-direction: column;
-    text-align: center; 
-    align-items: center;
-    padding-top: 26px;
+    width: auto;
+    max-width: 584px;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+    white-space: nowrap;
 }
 
 #search-outline {
-    width: auto;
-    max-width: 584px;
     height: 44px;
+    text-align: left;
     padding: 5px 8px 0 16px;
     border: 1px solid #dfe1e5;
     border-radius: 24px; 
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: stretch;
 }
 
 #searchbar {
+    flex-grow: 1;
     border: none;
 }   
+
+input[type="text"] {
+    font-size: 16px;
+    font-family: arial,sans-serif;
+}
+
+#searchbar:focus-visible {
+    outline: none;
+}
 
 #main-logo img {
     width: 272px;
